@@ -53,6 +53,8 @@ Refactored MoveList (and removed MLIST_MAX_MOVES limit) (7% slowdown).
 Refactored Board and Position (~3% slowdown, but fixed a minor biasDraw issue).
 Removed MAX_NUM_PROCS limitation (except for basic user input validation).
 Refactored Clock API + made PerMoveTime() take total clock time into account.
+Bugfix: we were jumping between 2 mating positions (because nothing better was
+        in the transposition table) until the opponent could draw.
 
 Version 10:
 Implemented depth-1 futility pruning.
